# nbc-licensing-api

./: Cargo.toml  Procfile  Railway.toml
src/: server.rs
src/abi/: License.json
src/api/: application.rs  licensee.rs  mod.rs  permit.rs  user.rs
src/api/licensing/: application.rs  licensee.rs  permit.rs
src/configs/: db.rs  env.rs  mod.rs
src/models/: application.rs  licensee.rs  mod.rs  response.rs  session.rs  user.rs
src/models/database/: user.rs
src/models/routes/: user.rs
src/routes/: user.rs
src/utils/: bit_operations.rs  contract_base.rs  error.rs  mod.rs
src/utils/serialization/: datetime.rs  mod.rs  response.rs
