[package]
name = "nbc-licensing-api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "nbc-licensing-api"
path = "src/server.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
ethers = "2.0.11"
salvo = { version = "0.58.5", features=["session"] }
serde = "1.0.193"
tokio = { version = "1.34.0", features = ["macros"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
