[package]
name = "nbc-licensing-api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "nbc-licensing-api"
path = "src/server.rs"

# Build configuration
[build]
# Name of the build step
name = "Rust Build"
# Command to build the Rust application
command = "cargo build --release"

# Start configuration
[start]
# Name of the run step
name = "Rust Run"
# Command to run the Rust application
command = "cargo run"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
dotenv = "0.15.0"
ethers = "2.0.11"
lazy_static = "1.4.0"
num-bigint = "0.4.4"
salvo = { version = "0.58.5", features=["session"] }
serde = "1.0.193"
tokio = { version = "1.34.0", features = ["macros"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
