[package]
name = "nbc-licensing-api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "nbc-licensing-api"
path = "src/server.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.2"
chrono = "0.4.31"
dotenv = "0.15.0"
either = "1.9.0"
ethers = "2.0.11"
lazy_static = "1.4.0"
mongodb = "2.8.0"
num-bigint = "0.4.4"
serde = "1.0.193"
serde_json = "1.0.108"
serde_with = "3.4.0"
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18" 
axum-macros = "0.4.0"